# joystick-shortcuts

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1  main.py  pyproject.toml  requirements.txt
app/: __init__.py  actions.py  models.py  profile_manager.py  xinput_poller.py
app/gui/: binding_dialog.py  capture_widgets.py  main_window.py  tray.py
app/system/: autostart.py  priority.py
tools/: smoke_run.py
