[project]
name = "joystick-shortcuts"
version = "0.1.0"
description = "Turn an XInput controller into global Windows keyboard shortcuts."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "XInput-Python>=0.4.0",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]

[project.scripts]
joystick-shortcuts = "main:main"
